fix: fix alignment issue on drop target.

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -20,6 +20,7 @@
     height: 3rem;
     text-align: center;
     line-height: 3rem;
+    padding: 0;
   }
 
   h3 {
